fixed spacing for accessability

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ header {
   width: 1024;
   padding: 35px;
 }
+p {
+  font-size: 1.5rem;;
+}
 h1 {
   text-align: center;
   font-size: 2.5rem;
